# MarpPi

./: .gitmodules  CMakeLists.txt  ai-history-graph.md  genux.md  package-lock.json  package.json  readme.md  tech-flow.md
archive/kinect/: README.md  start-video-stream.sh
archive/kinect/video_multiplexer/: config.py  manager.py  server.py  state.py
archive/kinect/video_multiplexer/servers/: __init__.py  control_server.py
archive/kinect/video_multiplexer/sources/: kinect.py  picam.py
archive/kinect/video_multiplexer/templates/: __init__.py  base.css  viewer.html
scripts/: boot-status-check.sh  install-services.sh  render-mermaid.ps1  service-monitor.desktop  service-monitor.py  setup-camera.sh  setup-softap.sh  setup-wifi-direct.sh  start-video-stream.sh  video_client.py  video_multiplexer.py
scripts/video_multiplexer/: __init__.py  __main__.py  templates.py
scripts/video_multiplexer/servers/: http_server.py  orchestrator.py  tcp_server.py
scripts/video_multiplexer/sources/: __init__.py  base.py
scripts/video_multiplexer/templates/: dual_viewer.html
src/: Constants.hpp  InputManager.cpp  InputManager.hpp  LedController.cpp  LedController.hpp  MotorController.cpp  MotorController.hpp  main.cpp
systemd/: service-monitor.service  softap.service  stepper-controller.service  video-stream.service
